* Refs #2210: Fixed the page menu being misaligned in IE7
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@20777 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenModel/skins/zenmodel/zenoss_ie.css
+++ b/Products/ZenModel/skins/zenmodel/zenoss_ie.css
@@ -66,7 +66,6 @@ div.menu {
 
 div#contextmenu_btn {
     position: relative;
-    top: 10px;
     width: 52px;
     z-index: 3000;
 }
@@ -98,6 +97,8 @@ table.tabtable,
 #tabsPane table td.contextmenutab .menu {
     width: 52px;
     z-index: 5000;
+    margin: 0; padding: 0;
+    margin-top: 10px;
 }
 
 td.contextmenutab { z-index: 3000; }
